# shared-memory-example

./: CMakeLists.txt  README.md  posix_shared_memory.cpp  posix_shared_memory.h  shared_memory_client.cpp  shared_memory_interface.h  shared_memory_server.cpp  win32_shared_memory.cpp  win32_shared_memory.h
